bitfields/tests/compile_error_cases/errors/bitfield_reserved_field_with_access.rs
use bitfields::bitfield;

#[bitfield(u8)]
struct Bitfield {
    #[bits(access = ro)]
    _reserved: u8,
}

fn main() {}
